[tool.poetry]
name = "robotable"
version = "0.1.0"
description = "An exercise for a robot moving in four directions on a table without falling."
authors = ["javad-amin <javad.amin@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
