[tool.poetry]
name = "robotable"
version = "0.1.0"
description = "An exercise for a robot moving in four directions on a table without falling."
authors = ["javad-amin <javad.amin@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = {version = "^22.10.0", allow-prereleases = true}
flake8 = "^6.0.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
